--- a/miniProject/nbproject/project.properties
+++ b/miniProject/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=C:\\Users\\prasad\\Desktop\\jdatechooser\\DateChooser.jar
 file.reference.DateChooser.jar-1=C:\\Users\\prasad\\Downloads\\jdatechooser\\DateChooser.jar
+file.reference.DateChooser.jar-2=../../jdatechooser/DateChooser.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
@@ -36,7 +37,9 @@ javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.DateChooser.jar-1}
+    ${file.reference.DateChooser.jar-1}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.DateChooser.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
