Updated Dynamic Support

--- a/miniProject/nbproject/private/private.properties
+++ b/miniProject/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 compile.on.save=true
-file.reference.DateChooser.jar=C:\\Users\\prasad\\Downloads\\jdatechooser
-file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\prasad\\Downloads\\mysql-connector-java-3.1.6-bin.jar
-user.properties.file=C:\\Users\\prasad\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+file.reference.DateChooser.jar=/home/cristiano/Desktop/jdatechooser/DateChooser.jar
+file.reference.DateChooser.jar-1=/home/cristiano/Desktop/jdatechooser/DateChooser.jar
+file.reference.DateChooser.jar-2=/home/cristiano/Desktop/jdatechooser/DateChooser.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=/home/cristiano/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
+user.properties.file=/home/cristiano/.netbeans/8.0.2/build.properties
